# simple-fork

./: Main.hs  Makefile  logfile.txt  simple-fork.cabal
