name:                simple-fork
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple

executable simple-fork
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, process, unix
  default-language:    Haskell2010

